--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
           <div class="hero-content">
 
-            <p class="hero-subtitle">We Are Product Designer From UK</p>
+            <p class="hero-subtitle">We Are Product Designer From India</p>
 
             <h2 class="h2 hero-title">We Design Interfaces That Users Love</h2>
 
