--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
       <div class="overlay" data-overlay></div>
 
       <a href="#">
-        <h1 class="logo">Desinic</h1>
+        <h1 class="logo">UpCommX</h1>
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
-          <a href="#" class="logo">Desinic</a>
+          <a href="#" class="logo">UpCommX</a>
 
           <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
             <ion-icon name="close-outline"></ion-icon>
@@ -609,7 +609,7 @@
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">Desinic</a>
+          <a href="#" class="logo">UpCommX</a>
 
           <p class="text">
             Maecenas pellentesque placerat quam, in finibus nisl tincidunt sed. Aliquam magna augue, malesuada ut
@@ -751,8 +751,8 @@
             </div>
 
             <div>
-              <a href="mailto:info@desinic.com" class="footer-item-link">info@desinic.com</a>
-              <a href="mailto:help@desinic.com" class="footer-item-link">help@desinic.com</a>
+              <a href="mailto:info@UpCommX.com" class="footer-item-link">info@UpCommX.com</a>
+              <a href="mailto:help@UpCommX.com" class="footer-item-link">help@UpCommX.com</a>
             </div>
 
           </li>
