--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
             <p class="hero-subtitle">We Are Product Designer From India</p>
 
-            <h2 class="h2 hero-title">We Design Interfaces That Users Love</h2>
+            <h2 class="h2 hero-title">UpCommX – E-commerce Website Development & SEO Agency</h2>
 
             <p class="hero-text">
               Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque vitae ante at elit fringilla ac
