--- a/index.html
+++ b/index.html
@@ -739,7 +739,6 @@
 
             <div>
               <a href="tel:+2484214313" class="footer-item-link">+248-421-4313</a>
-              <a href="tel:+2486871365" class="footer-item-link">+248-687-1365</a>
             </div>
 
           </li>
@@ -751,8 +750,7 @@
             </div>
 
             <div>
-              <a href="mailto:info@UpCommX.com" class="footer-item-link">info@UpCommX.com</a>
-              <a href="mailto:help@UpCommX.com" class="footer-item-link">help@UpCommX.com</a>
+              <a href="mailto:upcommx@gmail.com" class="footer-item-link">upcommx@gmail.com</a>
             </div>
 
           </li>
